# Beluca-Launcher

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml  release.yml
installer/: launcher.spec
src/launcher/: __main__.py  gui.py  updater.py
tests/: test_updater.py
